--- a/app/src/main/res/layout/activity_my_title.xml
+++ b/app/src/main/res/layout/activity_my_title.xml
@@ -4,9 +4,10 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/activity_bottom_height"
-    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
     android:background="@color/colorPrimaryDark">
     <TextView
+        android:id="@id/fragment_title_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/title_text_larger"
