--- a/app/src/main/res/layout/activity_home_title.xml
+++ b/app/src/main/res/layout/activity_home_title.xml
@@ -8,6 +8,7 @@
     android:layout_alignParentTop="true"
     android:background="@color/colorPrimaryDark">
     <TextView
+        android:id="@id/fragment_title_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/title_text_larger"
