--- a/app/src/main/res/layout/activity_my_detail.xml
+++ b/app/src/main/res/layout/activity_my_detail.xml
@@ -187,7 +187,7 @@
             android:src="@drawable/back_right_black"/>
     </RelativeLayout>
         <RelativeLayout
-            android:id="@id/rl_contact_phone_detail"
+            android:id="@id/rl_birth_calendar_detail"
             android:layout_width="match_parent"
             android:background="#fff"
             android:layout_marginTop="1dp"
@@ -206,6 +206,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="30dp"
+                android:textColor="@color/colorPrimaryDark"
                 android:layout_centerVertical="true"
                 android:text=""/>
             <ImageView
