--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -103,6 +103,8 @@
 
     <item name="fragment_container" type="id"/>
     <item name="fragment_title_content" type="id"/>
+    <item name="et_location_dialog" type="id"/>
+    <item name="et_introduction_dialog" type="id"/>
 
 
 
