--- a/app/src/main/res/layout/activity_my_detail.xml
+++ b/app/src/main/res/layout/activity_my_detail.xml
@@ -388,7 +388,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="30dp"
                 android:layout_centerVertical="true"
-                android:text="@string/car_license_detail"/>
+                android:text=""/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
