--- a/app/src/main/res/layout/dialog_drive_age.xml
+++ b/app/src/main/res/layout/dialog_drive_age.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ddd"
-    android:orientation="vertical">
+    android:layout_height="match_parent" android:orientation="vertical">
 
     <TextView
         android:id="@id/tv_name_dialog"
@@ -17,14 +15,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
         >
         <EditText
             android:id="@id/et_drive_age"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+           android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:inputType="number"
             android:hint="@string/drive_age_et"
             android:background="@drawable/shape"
